--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,8 +1,8 @@
-# {% set name = "splot" %}
+{% set name = "splot" %}
 {% set version = "1.0.0" %}
 
 package:
-  # name: {{ name|lower }}
+  name: {{ name|lower }}
   version: {{ version }}
 
 source:
