--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,34 +1,37 @@
 {% set name = "splot" %}
 {% set version = "1.1.3" %}
 
+
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/s/splot/splot-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/splot-{{ version }}.tar.gz
   sha256: 7be9557cd3c6c0374e07c2a149e1330318d22d6ecb420f70f1a0dbad9b3187fd
 
 build:
+  number: 1
   noarch: python
-  number: 0
-  script: {{ PYTHON }} -m pip install . --no-deps -vv
+  script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
   host:
     - python >=3
     - pip
   run:
-    - python >=3.5
-    - numpy
+    - python >=3
+    - descartes
+    - esda
     - geopandas >=0.4.0
-    - matplotlib-base
-    - seaborn
+    - giddy
     - libpysal
     - mapclassify
-    - esda
+    - matplotlib-base
+    - numpy
+    - seaborn
     - spreg
-    - giddy
+    # not listed in the metadata but required when importing splot.giddy
     - ipywidgets
 
 test:
@@ -38,6 +41,10 @@ test:
     - splot.giddy
     - splot.libpysal
     - splot.mapping
+  commands:
+    - pip check
+  requires:
+    - pip
 
 about:
   home: http://pysal.org
