--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,6 +19,8 @@ requirements:
   host:
     - python {{ python_min }}
     - pip
+    - setuptools >=61.0
+    - setuptools-scm >=6.2
   run:
     - python >={{ python_min }}
     - esda
